--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "portfolioWG",
+    "name": "portfolio/wg",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
